Added AWS EC2 SPOT Interruption Notification and Secrets Manager Backup on S3

--- a/aws-ec2-backup-check/cloudformation-template.yaml
+++ b/aws-ec2-backup-check/cloudformation-template.yaml
@@ -73,7 +73,7 @@ Resources:
         - Key: 'Name'
           Value: !Ref LambdaFunctionName
         - Key: 'Project'
-          Value: 'Cloudcare'
+          Value: 'MyProject'
         - Key: 'Environment'
           Value: 'prod'
         - Key: 'CreatedBy'
@@ -110,7 +110,7 @@ Resources:
         - Key: 'Name'
           Value: !Ref LambdaFunctionName
         - Key: 'Project'
-          Value: 'Cloudcare'
+          Value: 'MyProject'
         - Key: 'Environment'
           Value: 'prod'
         - Key: 'CreatedBy'
@@ -140,7 +140,7 @@ Resources:
         - Key: 'Name'
           Value: !Ref LambdaFunctionName
         - Key: 'Project'
-          Value: 'Cloudcare'
+          Value: 'MyProject'
         - Key: 'Environment'
           Value: 'prod'
         - Key: 'CreatedBy'
