--- a/aws-guardduty-notification/cloudformation-template.yaml
+++ b/aws-guardduty-notification/cloudformation-template.yaml
@@ -54,7 +54,7 @@ Resources:
         - Key: 'Name'
           Value: !Sub '${AWS::StackName}-guardduty-lambda-role'
         - Key: 'Project'
-          Value: 'Cloudcare'
+          Value: 'MyProject'
         - Key: 'Environment'
           Value: 'prod'
         - Key: 'CreatedBy'
@@ -66,7 +66,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: !Sub '${AWS::StackName}-guardduty-processor'
-      Runtime: python3.14
+      Runtime: python3.13
       Handler: lambda_function.lambda_handler
       Role: !GetAtt GuardDutyLambdaRole.Arn
       Timeout: 30
@@ -91,7 +91,7 @@ Resources:
         - Key: 'Name'
           Value: !Sub '${AWS::StackName}-guardduty-processor'
         - Key: 'Project'
-          Value: 'Cloudcare'
+          Value: 'MyProject'
         - Key: 'Environment'
           Value: 'prod'
         - Key: 'CreatedBy'
@@ -117,7 +117,7 @@ Resources:
         - Key: 'Name'
           Value: !Sub '${AWS::StackName}-guardduty-rule'
         - Key: 'Project'
-          Value: 'Cloudcare'
+          Value: 'MyProject'
         - Key: 'Environment'
           Value: 'prod'
         - Key: 'CreatedBy'
