--- a/aws-cloudwatch-alarm-failed-monitoring/inputs.yml
+++ b/aws-cloudwatch-alarm-failed-monitoring/inputs.yml
@@ -12,6 +12,6 @@ Email:
   details:
     subject_prefix: "Example"
     to:
-      - "test@example.com"
+      - "test@cloudplatform.com"
     cc: []
     bcc: []
